--- a/website/money_mine_page/page_ui.html
+++ b/website/money_mine_page/page_ui.html
@@ -50,7 +50,7 @@
                     <div>股票投資APP</div>
                     <div>UI設計</div>
                 </div>
-                <div class="page_main_note">共50頁</div>
+                <div class="page_main_note">共17頁</div>
             </div>
         </div>
 
@@ -67,13 +67,36 @@
             <div class="page_number">0<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
     <!-- ... p0 主題版面end ... -->
-    <!-- ... p1 左圖 文字版面 ... -->
-    <div id="p1" class="main_mockup_page main_mockup_left_page">
+    <!-- ... p1 主題版面 ... -->
+    <div id="p1" class="main_mockup_page">
+        <div class="page_main_container">
+            <div class="page_main_content" style="width:100%;">
+                <div class="page_main_title">
+                    <div>架構</div>
+                </div>
+                <div style="width:100%;text-align:center;">
+                    <picture>
+                        <img src="image_ui/s_page.png" style="max-width:100%;">
+                    </picture>
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">01<span>page</span></div>
+            <div class="page_text">
+                <span>STOCK TRADING APPLICATION</span><br />
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
+            </div>
+        </div>
+    </div>
+    <!-- ... p1 主題版面end ... -->
+    <!-- ... p2 左圖 文字版面 ... -->
+    <div id="p2" class="main_mockup_page main_mockup_left_page">
         <div class="page_main_container">
             <div class="m_pic_left">
                 <picture>
@@ -95,15 +118,15 @@
         </div>
 
         <div class="page_bottom_block">
-            <div class="page_number">01<span>page</span></div>
+            <div class="page_number">02<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p1 左圖 文字版面end ... -->
-    <!-- ... p2 左右圖 文字版面 ... -->
+    <!-- ... p2 左圖 文字版面end ... -->
+    <!-- ... p3 左右圖 文字版面 ... -->
     <div class="main_mockup_page">
         <div class="page_main_container">
             <div class="m_pic_left">
@@ -122,23 +145,23 @@
             </div>
             <div class="m_pic_right">
                 <picture>
-                    <source media="(max-width:960px)" srcset="image/m1_m.png" />
-                    <img src="image/m8.png">
+                    <source media="(max-width:960px)" srcset="image/m8-2_m.png" />
+                    <img src="image/m8-2.png">
                 </picture>
             </div>
         </div>
 
         <div class="page_bottom_block">
-            <div class="page_number">02<span>page</span></div>
+            <div class="page_number">03<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p2 左右圖 文字版面end ... -->
-    <!-- ... p3 4圖 文字版面 ... -->
-    <div class="main_mockup_page">
+    <!-- ... p3 左右圖 文字版面end ... -->
+    <!-- ... p4 4圖 文字版面 ... -->
+    <div id="p4" class="main_mockup_page">
         <div class="page_main_title" style="margin:80px 0px 0px 0px;">
             <div>登入介面</div>
         </div>
@@ -171,15 +194,15 @@
         </div>
 
         <div class="page_bottom_block">
-            <div class="page_number">03<span>page</span></div>
+            <div class="page_number">04<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p3 4圖 文字版面end ... -->
-    <!-- ... p4 4圖 文字版面 ... -->
+    <!-- ... p4 4圖 文字版面end ... -->
+    <!-- ... p5 4圖 文字版面 ... -->
     <div class="main_mockup_page">
         <div class="page_main_title" style="margin:80px 0px 0px 0px;">
             <div>註冊介面</div>
@@ -213,16 +236,16 @@
         </div>
 
         <div class="page_bottom_block">
-            <div class="page_number">04<span>page</span></div>
+            <div class="page_number">05<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p4 4圖 文字版面end ... -->
-    <!-- ... p5 左圖 文字版面 ... -->
-    <div class="main_mockup_page main_mockup_left_page">
+    <!-- ... p5 4圖 文字版面end ... -->
+    <!-- ... p6 左圖 文字版面 ... -->
+    <div id="p6" class="main_mockup_page main_mockup_left_page">
         <div class="page_main_container">
             <div class="m_pic_left">
                 <picture>
@@ -243,15 +266,15 @@
             </div>
         </div>
         <div class="page_bottom_block">
-            <div class="page_number">05<span>page</span></div>
+            <div class="page_number">06<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p5 左圖 文字版面end ... -->
-    <!-- ... p6 左圖 文字版面 ... -->
+    <!-- ... p6 左圖 文字版面end ... -->
+    <!-- ... p7 左圖 文字版面 ... -->
     <div class="main_mockup_page main_mockup_left_page">
         <div class="page_main_container">
             <div class="m_pic_left">
@@ -274,15 +297,15 @@
             </div>
         </div>
         <div class="page_bottom_block">
-            <div class="page_number">06<span>page</span></div>
+            <div class="page_number">07<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p6 左圖 文字版面end ... -->
-    <!-- ... p7 左圖 文字版面 ... -->
+    <!-- ... p7 左圖 文字版面end ... -->
+    <!-- ... p8 左圖 文字版面 ... -->
     <div class="main_mockup_page main_mockup_left_page">
         <div class="page_main_container">
             <div class="m_pic_left">
@@ -303,18 +326,18 @@
             </div>
         </div>
         <div class="page_bottom_block">
-            <div class="page_number">07<span>page</span></div>
+            <div class="page_number">08<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p7 左圖 文字版面end ... -->
-    <!-- ... p8 4圖 文字版面 ... -->
-    <div class="main_mockup_page">
+    <!-- ... p8 左圖 文字版面end ... -->
+    <!-- ... p9 4圖 文字版面 ... -->
+    <div id="p9" class="main_mockup_page">
         <div class="page_main_title" style="margin:80px 0px 0px 0px;">
-            <div>個股篩選介面</div>
+            <div>個股篩選</div>
         </div>
         <div class="page_main_title_note">提供條件選項，幫助使用者選出符合自己交易策略的個股標的</div>
         <div class="page_main_container page_pic_container" style="margin-top:30px;justify-content:center;">
@@ -333,18 +356,18 @@
         </div>
 
         <div class="page_bottom_block">
-            <div class="page_number">08<span>page</span></div>
+            <div class="page_number">09<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p8 4圖 文字版面end ... -->
-    <!-- ... p9 4圖 文字版面 ... -->
-    <div class="main_mockup_page">
+    <!-- ... p9 4圖 文字版面end ... -->
+    <!-- ... p10 4圖 文字版面 ... -->
+    <div id="p10" class="main_mockup_page">
         <div class="page_main_title" style="margin:80px 0px 0px 0px;">
-            <div>自選個股介面</div>
+            <div>自選個股</div>
         </div>
         <div class="page_main_title_note">提供介面幫助使用者整理選出的個股標的</div>
         <div class="page_main_container page_pic_container" style="margin-top:30px;justify-content:center;">
@@ -363,16 +386,16 @@
         </div>
 
         <div class="page_bottom_block">
-            <div class="page_number">9<span>page</span></div>
+            <div class="page_number">10<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p9 4圖 文字版面end ... -->
-    <!-- ... p10 4圖 文字版面 ... -->
-    <div class="main_mockup_page">
+    <!-- ... p10 4圖 文字版面end ... -->
+    <!-- ... p11 4圖 文字版面 ... -->
+    <div id="p11" class="main_mockup_page">
         <div class="page_main_title" style="margin:80px 0px 0px 0px;">
             <div>交易紀錄</div>
         </div>
@@ -387,16 +410,16 @@
         </div>
 
         <div class="page_bottom_block">
-            <div class="page_number">10<span>page</span></div>
+            <div class="page_number">11<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p10 4圖 文字版面end ... -->
-    <!-- ... p11 4圖 文字版面 ... -->
-    <div class="main_mockup_page">
+    <!-- ... p11 4圖 文字版面end ... -->
+    <!-- ... p12 4圖 文字版面 ... -->
+    <div id="p12" class="main_mockup_page">
         <div class="page_main_title" style="margin:80px 0px 0px 0px;">
             <div>損益報告</div>
         </div>
@@ -423,16 +446,16 @@
         </div>
 
         <div class="page_bottom_block">
-            <div class="page_number">11<span>page</span></div>
+            <div class="page_number">12<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p11 4圖 文字版面end ... -->
-    <!-- ... p12 4圖 文字版面 ... -->
-    <div class="main_mockup_page">
+    <!-- ... p12 4圖 文字版面end ... -->
+    <!-- ... p13 4圖 文字版面 ... -->
+    <div id="p13" class="main_mockup_page">
         <div class="page_main_title" style="margin:80px 0px 0px 0px;">
             <div>國際、國內股市</div>
         </div>
@@ -453,16 +476,16 @@
         </div>
 
         <div class="page_bottom_block">
-            <div class="page_number">12<span>page</span></div>
+            <div class="page_number">13<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p12 4圖 文字版面end ... -->
-    <!-- ... p13 4圖 文字版面 ... -->
-    <div class="main_mockup_page">
+    <!-- ... p13 4圖 文字版面end ... -->
+    <!-- ... p14 4圖 文字版面 ... -->
+    <div id="p14" class="main_mockup_page">
         <div class="page_main_title" style="margin:80px 0px 0px 0px;">
             <div>經濟新聞</div>
         </div>
@@ -483,16 +506,16 @@
         </div>
 
         <div class="page_bottom_block">
-            <div class="page_number">13<span>page</span></div>
+            <div class="page_number">14<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p13 4圖 文字版面end ... -->
-    <!-- ... p14 4圖 文字版面 ... -->
-    <div class="main_mockup_page">
+    <!-- ... p14 4圖 文字版面end ... -->
+    <!-- ... p15 4圖 文字版面 ... -->
+    <div id="p15" class="main_mockup_page">
         <div class="page_main_title" style="margin:80px 0px 0px 0px;">
             <div>談股論經</div>
         </div>
@@ -513,16 +536,16 @@
         </div>
 
         <div class="page_bottom_block">
-            <div class="page_number">14<span>page</span></div>
+            <div class="page_number">15<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p14 4圖 文字版面end ... -->
+    <!-- ... p15 4圖 文字版面end ... -->
     <!-- ... p15 4圖 文字版面 ... -->
-    <div class="main_mockup_page">
+    <div id="p16" class="main_mockup_page">
         <div class="page_main_title" style="margin:80px 0px 0px 0px;">
             <div>股市達人</div>
         </div>
@@ -543,64 +566,124 @@
         </div>
 
         <div class="page_bottom_block">
-            <div class="page_number">15<span>page</span></div>
+            <div class="page_number">16<span>page</span></div>
             <div class="page_text">
                 <span>STOCK TRADING APPLICATION</span><br />
-                MONEY MINE UI DESIGN
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
             </div>
         </div>
     </div>
-    <!-- ... p15 4圖 文字版面end ... -->
+    <!-- ... p16 4圖 文字版面end ... -->
+    <!-- ... p17 4圖 文字版面 ... -->
+    <div id="p17" class="main_mockup_page">
+        <div class="page_main_title" style="margin:80px 0px 0px 0px;">
+            <div>底部導覽</div>
+        </div>
+        <div class="page_main_title_note">快速切換主要使用頁面</div>
+        <div class="page_main_container page_pic_container" style="margin-top:30px;justify-content:center;">
+            <div class="m_pic">
+                <div class="m_pic_text">尋找類股</div>
+                <picture>
+                    <img src="image/m8_m.png">
+                </picture>
+            </div>
+            <div class="m_pic">
+                <div class="m_pic_text">尋找類股列表</div>
+                <picture>
+                    <img src="image/m8-2_m.png">
+                </picture>
+            </div>
+            <div class="m_pic">
+                <div class="m_pic_text">股票下單</div>
+                <picture>
+                    <img src="image/m6_m.png">
+                </picture>
+            </div>
+            <div class="m_pic">
+                <div class="m_pic_text">訊息通知</div>
+                <picture>
+                    <img src="image/m21_m.png">
+                </picture>
+            </div>
+        </div>
 
+        <div class="page_bottom_block">
+            <div class="page_number">17<span>page</span></div>
+            <div class="page_text">
+                <span>STOCK TRADING APPLICATION</span><br />
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
+            </div>
+        </div>
+    </div>
+    <!-- ... p17 4圖 文字版面end ... -->
+    <!-- ... p18 主題版面 ... -->
+    <div class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title" style="margin-bottom:20px;">
+                    <div>感謝您的閱讀</div>
+                </div>
+                <div class="page_main_note">想了解UX設計介紹？<a href="page_ux.html">點擊前往</a></div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">End</div>
+            <div class="page_text">
+                <span>STOCK TRADING APPLICATION</span><br />
+                MONEY MINE <span style="color:#FDC63E;">UI DESIGN</span>
+            </div>
+        </div>
+    </div>
+    <!-- ... p18 主題版面end ... -->
 
+    <div class="page_choice">
+        <div class="page_choice_btn active">UI</div>
+        <a href="page_ux.html">
+            <div class="page_choice_btn">UX</div>
+        </a>
+    </div>
     <img src="image/nav_btn.png" class="open_choice_btn" alt="" />
     <div class="choice_btn_area_bg" style="display:none;"></div>
 
     <div class="choice_btn_area">
+        <a href="#p1">
+            <div class="choice_btn">01.架構</div>
+        </a>
         <a href="#p2">
-            <div class="choice_btn">02.席克定律</div>
+            <div class="choice_btn">02.設計發想</div>
+        </a>
+        <a href="#p4">
+            <div class="choice_btn">04.登入註冊</div>
+        </a>
+        <a href="#p6">
+            <div class="choice_btn">06.功能首頁</div>
+        </a>
+        <a href="#p9">
+            <div class="choice_btn">09.個股篩選</div>
         </a>
         <a href="#p10">
-            <div class="choice_btn">10.費茲定律</div>
+            <div class="choice_btn">10.自選個股</div>
+        </a>
+        <a href="#p11">
+            <div class="choice_btn">11.交易紀錄</div>
+        </a>
+        <a href="#p12">
+            <div class="choice_btn">12.損益報告</div>
+        </a>
+        <a href="#p13">
+            <div class="choice_btn">13.國際、國內股市</div>
+        </a>
+        <a href="#p14">
+            <div class="choice_btn">14.經濟新聞</div>
+        </a>
+        <a href="#p15">
+            <div class="choice_btn">15.談股論經</div>
+        </a>
+        <a href="#p16">
+            <div class="choice_btn">16.股市達人</div>
         </a>
         <a href="#p17">
-            <div class="choice_btn">17.十大可用原則</div>
-        </a>
-        <a href="#p19">
-            <div class="choice_btn">19.狀態可見原則</div>
-        </a>
-        <a href="#p22">
-            <div class="choice_btn">22.環境貼切原則</div>
-        </a>
-        <a href="#p24">
-            <div class="choice_btn">24.使用者可控原則</div>
-        </a>
-        <a href="#p26">
-            <div class="choice_btn">26.一致性原則</div>
-        </a>
-        <a href="#p28">
-            <div class="choice_btn">28.防錯原則</div>
-        </a>
-        <a href="#p32">
-            <div class="choice_btn">32.易取原則</div>
-        </a>
-        <a href="#p35">
-            <div class="choice_btn">35.靈活高效原則</div>
-        </a>
-        <a href="#p37">
-            <div class="choice_btn">37.優美簡約原則</div>
-        </a>
-        <a href="#p39">
-            <div class="choice_btn">39.容錯原則</div>
-        </a>
-        <a href="#p42">
-            <div class="choice_btn">42.人性化幫助</div>
-        </a>
-        <a href="#p44">
-            <div class="choice_btn">44.奧卡姆剃刀法則</div>
-        </a>
-        <a href="#p45">
-            <div class="choice_btn">45.時間相對論</div>
+            <div class="choice_btn">17.底部導覽</div>
         </a>
     </div>
 
