--- a/website/money_mine_page/page_ux.html
+++ b/website/money_mine_page/page_ux.html
@@ -18,27 +18,8 @@
     <meta property="og:description" content="財礦-股市看盤APP設計">
 
     <link rel="shoutcut icon" href="image/favicon-jw.ico" />
-    <title>股票投資APP設計</title>
+    <title>股票投資APP-UX應用</title>
     <link href="css/page.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $(".open_choice_btn").click(function() {
-                $(".choice_btn_area_bg,.close_icon").fadeIn(1000);
-                $(".choice_btn_area").addClass("open_choice_class");
-            });
-        });
-
-    </script>
-    <script>
-        $(document).ready(function() {
-            $(".close_icon,.choice_btn,.choice_btn_area_bg").click(function() {
-                $(".choice_btn_area_bg,.close_icon").fadeOut(1000);
-                $(".choice_btn_area").removeClass("open_choice_class");
-            });
-        });
-
-    </script>
 </head>
 
 <body>
