--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@
             <div class="intor_text_container_1 intor_text_dis_1">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">&frasl;</span>10<span class="intor_symbol_1">&frasl;</span>15，銘傳數位媒體設計</div>
                 <div class="intor_text">
-                    在網頁、UI設計工作已有9年經驗，<span style="color:#ef3e3e;font-weight:bold;">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
+                    在網頁、UI設計工作已有9年經驗，<span class="intor_text_point">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
                 </div>
             </div>
             <div class="intor_text_container_1 intor_text_dis_2" style="padding-top:0px;">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">.</span>10<span class="intor_symbol_1">.</span>15<br />銘傳大學數位媒體設計</div>
                 <div class="intor_text">
-                    在網頁、UI設計工作已有9年經驗，<span style="color:#ef3e3e;font-weight:bold;">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
+                    在網頁、UI設計工作已有9年經驗，<span class="intor_text_point">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
                 </div>
             </div>
             <div class="intor_text_container_2 intor_text_dis_1">
                 <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
                 <div class="intor_text" style="word-break:break-all">
-                    使用Figma、Photoshop、illustrator製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span style="color:#ef3e3e;font-weight:bold;">熟悉RWD網頁建置技術，在規畫時能掌握可行度</span>。懂IOS和google設計規範，靈活<span style="color:#ef3e3e;font-weight:bold;">運用介面元件和使用者體驗知識，進行設計和規畫流程並製作設計規範。</span>
+                    使用Figma、Photoshop、illustrator製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span class="intor_text_point">熟悉RWD網頁建置技術，在規畫時能掌握可行度</span>。懂IOS和google設計規範，靈活<span class="intor_text_point">運用介面元件和使用者體驗知識，進行設計和規畫流程並製作設計規範。</span>
                 </div>
             </div>
         </div>
@@ -143,7 +143,7 @@
         <div class="intor_text_container_2 intor_text_dis_2" style="float:none;">
             <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
             <div class="intor_text" style="word-break:break-all">
-                使用Figma、Photoshop、illustrator製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span style="color:#ef3e3e;font-weight:bold;">熟悉RWD網頁建置技術，在規畫時能掌握可行度</span>。懂IOS和google設計規範，<span style="color:#ef3e3e;font-weight:bold;">運用介面元件和使用者體驗知識，進行設計和規畫流程並製作設計規範。</span>
+                使用Figma、Photoshop、illustrator製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span class="intor_text_point">熟悉RWD網頁建置技術，在規畫時能掌握可行度</span>。懂IOS和google設計規範，<span class="intor_text_point">運用介面元件和使用者體驗知識，進行設計和規畫流程並製作設計規範。</span>
             </div>
         </div>
 
@@ -165,7 +165,7 @@
 
                 <div id="tab1" class="works_item_area">
                     <div class="works_item_container">
-                        <a href="https://www.figma.com/file/eAMUmaOZsZQUqmqTKaS2a3/%E6%B0%B8%E8%B1%90%E7%B6%B2%E6%8A%95%E9%A0%81%E9%9D%A2?type=design&node-id=1556%3A1126&t=VoDJYVODg6cgajqb-1" target="_blank">
+                        <a href="website/sino/page.html" target="_blank">
                             <div class="works_item">
                                 <div class="works_item_pic"><img id="t1_1" src="image/p16s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
@@ -173,7 +173,7 @@
                                 </div>
                                 <div class="works_item_bar">
                                     <span>永豐網路投保</span><br />
-                                    <span style="font-size:14px;color:#ffd452;">UI library、RWD mockup、Prototype</span>
+                                    <span style="font-size:14px;color:#ffd452;">設計規範、RWD示意圖、原型展示</span>
                                 </div>
                             </div>
                         </a>
@@ -216,7 +216,7 @@
 
                 <div id="tab2" class="works_item_area">
                     <div class="works_item_container">
-                        <a href="https://www.figma.com/file/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=535-5508&mode=design&t=P8lx23V7IwR8tjrD-0" target="_blank">
+                        <a href="website/cath/page.html" target="_blank">
                             <div class="works_item">
                                 <div class="works_item_pic"><img id="t2_1" src="image/a5s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
@@ -224,7 +224,6 @@
                                 </div>
                                 <div class="works_item_bar">
                                     <span>銀行APP redesign</span>
-                                    <span style="font-size:14px;">(外連figma)</span><br />
                                     <span style="font-size:14px;color:#ffd452;">訪談整理、歸納問題點、思考解決、製作架構原型</span>
                                 </div>
                             </div>
@@ -388,7 +387,7 @@
                 </div>
             </div>
         </div>
-        <div class="works_area_tip"></div>
+        <div class="works_area_tip">覺得有合作的機會嗎？歡迎來信~</div>
     </div>
 
     <div class="footer_container footer_bottom">
