--- a/website/cath/page.html
+++ b/website/cath/page.html
@@ -117,7 +117,7 @@
         </div>
         <div class="pic_container">
             <div class="title" style="margin-bottom:10px;">原型圖(Mock up)</div>
-            <div class="note" style="margin-bottom:20px;">至figma瀏覽部分<a href="https://www.figma.com/proto/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=765-22367&t=8NPRkqKGxaQKFtOf-0&scaling=min-zoom&page-id=279%3A413&starting-point-node-id=765%3A22367&show-proto-sidebar=1" target="_blank">原機展示(Prototype)</a></div>
+            <div class="note" style="margin-bottom:20px;">至figma瀏覽部分<a href="https://www.figma.com/proto/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=765-22367&t=8NPRkqKGxaQKFtOf-0&scaling=min-zoom&page-id=279%3A413&starting-point-node-id=765%3A22367&show-proto-sidebar=1" target="_blank">原型展示(Prototype)</a></div>
             <div class="mockip_pic_group">
                 <div class="mockip_pic"><img src="image/p9_1.png"></div>
                 <div class="mockip_pic"><img src="image/p9_2.png"></div>
