--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
             <div class="intor_text_container_1 intor_text_dis_1">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">&frasl;</span>10<span class="intor_symbol_1">&frasl;</span>15，銘傳數位媒體設計</div>
                 <div class="intor_text">
-                    在網頁、UI設計工作已有9年經驗，<span class="intor_text_point">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
+                    在網頁、UI設計工作已有9年經驗，<span class="intor_text_point">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UI.UX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
                 </div>
             </div>
             <div class="intor_text_container_1 intor_text_dis_2" style="padding-top:0px;">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">.</span>10<span class="intor_symbol_1">.</span>15<br />銘傳大學數位媒體設計</div>
                 <div class="intor_text">
-                    在網頁、UI設計工作已有9年經驗，<span class="intor_text_point">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
+                    在網頁、UI設計工作已有9年經驗，<span class="intor_text_point">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UI.UX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
                 </div>
             </div>
             <div class="intor_text_container_2 intor_text_dis_1">
