--- a/website/cath/page.html
+++ b/website/cath/page.html
@@ -123,7 +123,7 @@
                 <div class="mockip_pic"><img src="image/p9_2.png"></div>
                 <div class="mockip_pic"><img src="image/p9_3.png"></div>
                 <div class="mockip_pic"><img src="image/p9_4.png"></div>
-                <div class="mockip_pic"><img src="image/p9_5.png"></div>
+                <div class="mockip_pic"><img src="image/g1.gif"></div>
                 <div class="mockip_pic"><img src="image/p9_6.png"></div>
                 <div class="mockip_pic"><img src="image/p9_7.png"></div>
                 <div class="mockip_pic"><img src="image/p9_8.png"></div>
