--- a/index.html
+++ b/index.html
@@ -156,9 +156,10 @@
                 <div class="works_btn_bar"><span>官網類</span><i class="fa fa-sort-desc"></i></div>
                 <div class="works_btn_container">
                     <div class="works_btn works_btn_active"><a href="#tab1">官網類</a></div>
-                    <div class="works_btn"><a href="#tab2"></a>APP&amp;後台</div>
+                    <div class="works_btn"><a href="#tab2"></a>APP類</div>
                     <div class="works_btn"><a href="#tab3">行銷類</a></div>
-                    <div class="works_btn"><a href="#tab4">PS繪圖</a></div>
+                    <div class="works_btn"><a href="#tab4">系統後台</a></div>
+                    <div class="works_btn"><a href="#tab5">繪圖類</a></div>
                 </div>
             </div>
             <div>
@@ -251,14 +252,6 @@
                             </div>
                         </a>
                     </div>
-                    <div class="works_item_container">
-                        <div id="s10" class="works_item item_show_pic_3">
-                            <div class="works_item_pic"><img id="t2_4" src="image/y1s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>後台介面設計</span></div>
-                        </div>
-                    </div>
                 </div>
 
                 <div id="tab3" class="works_item_area">
@@ -303,8 +296,43 @@
 
                 <div id="tab4" class="works_item_area">
                     <div class="works_item_container">
+                        <div id="s10" class="works_item item_show_pic_3">
+                            <div class="works_item_pic"><img id="t4_1" src="image/y1s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>銀行風險管理系統</span></div>
+                        </div>
+                    </div>
+                    <div class="works_item_container">
+                        <div id="s10" class="works_item item_show_pic_4">
+                            <div class="works_item_pic"><img id="t4_2" src="image/y2s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>銀行企金風險分析</span></div>
+                        </div>
+                    </div>
+                    <div class="works_item_container">
+                        <div id="s10" class="works_item item_show_pic_5">
+                            <div class="works_item_pic"><img id="t4_3" src="image/y3s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>案件管理系統</span></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="tab5" class="works_item_area">
+                    <div class="works_item_container">
+                        <div id="s16" class="works_item item_show_pic">
+                            <div class="works_item_pic"><img id="t5_1" src="image/s16s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>AI繪圖應用</span></div>
+                        </div>
+                    </div>
+                    <div class="works_item_container">
                         <div id="s1" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t4_1" src="image/s1s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t5_2" src="image/s1s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>影像合成</span></div>
@@ -312,7 +340,7 @@
                     </div>
                     <div class="works_item_container">
                         <div id="s2" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t4_2" src="image/s2s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t5_3" src="image/s2s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>影像合成</span></div>
@@ -320,7 +348,7 @@
                     </div>
                     <div class="works_item_container">
                         <div id="s15" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t4_3" src="image/s15s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t5_4" src="image/s15s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>影像合成</span></div>
@@ -328,7 +356,7 @@
                     </div>
                     <div class="works_item_container">
                         <div id="s3" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t4_5" src="image/s3s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t5_5" src="image/s3s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>小鋼琴-物件製作</span></div>
@@ -337,7 +365,7 @@
 
                     <div class="works_item_container">
                         <div id="s8" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t4_6" src="image/s8s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t5_6" src="image/s8s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>鏡頭-物件製作</span></div>
@@ -345,7 +373,7 @@
                     </div>
                     <div class="works_item_container">
                         <div id="s11" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t4_7" src="image/s11s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t5_7" src="image/s11s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>產品修圖</span></div>
@@ -353,7 +381,7 @@
                     </div>
                     <div class="works_item_container">
                         <div id="s10" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t4_8" src="image/s10s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t5_8" src="image/s10s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>貓頭鷹-角色設計</span></div>
@@ -361,30 +389,6 @@
                     </div>
                 </div>
 
-                <div id="tab6" class="works_item_area">
-                    <div class="works_item_container">
-                        <a href="website/ux/page_1.html" target="_blank">
-                            <div class="works_item">
-                                <div class="works_item_pic"><img id="t6_1" src="image/u2s.jpg" alt="" />
-                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                </div>
-                                <div class="works_item_bar"><span>使用者訪談</span></div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="works_item_container">
-                        <a href="website/ux/page_2.html" target="_blank">
-                            <div class="works_item">
-                                <div class="works_item_pic"><img id="t6_2" src="image/u1s.jpg" alt="" />
-                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                </div>
-                                <div class="works_item_bar">
-                                    <span>可用性測試</span><br />
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="works_area_tip">覺得有合作的機會嗎？歡迎來信~</div>
@@ -433,17 +437,29 @@
         <div class="pup_img_container">
             <img src="work_image/y1-1.png" alt="" />
             <img src="work_image/y1-2.png" alt="" />
-            <img src="work_image/y1-3.png" alt="" />
-            <img src="work_image/y1-4.png" alt="" />
-            <img src="work_image/y1-5.png" style="display:none;" alt="" />
-            <img src="work_image/y1-6.png" style="display:none;" alt="" />
+
         </div>
         <img src="image/close_icon.png" class="pup_close_icon" alt="" />
     </div>
     <div class="pup_container_4" style="display:none;">
         <div class="pup_bg"></div>
         <div class="pup_img_container">
-            <img src="work_image/g1.gif" alt="" />
+            <img src="work_image/y1-3.png" alt="" />
+            <img src="work_image/y1-4.png" alt="" />
+            <img src="work_image/y1-5.png" alt="" />
+            <img src="work_image/y1-6.png" alt="" />
+        </div>
+        <img src="image/close_icon.png" class="pup_close_icon" alt="" />
+    </div>
+    <div class="pup_container_5" style="display:none;">
+        <div class="pup_bg"></div>
+        <div class="pup_img_container">
+            <img src="work_image/y1-7.png" alt="" />
+            <img src="work_image/y1-8.png" alt="" />
+            <img src="work_image/y1-9.png" alt="" />
+            <img src="work_image/y1-10.png" alt="" />
+            <img src="work_image/y1-11.png" alt="" />
+            <img src="work_image/y1-12.png" alt="" />
         </div>
         <img src="image/close_icon.png" class="pup_close_icon" alt="" />
     </div>
@@ -487,6 +503,15 @@
     });
     $('.pup_close_icon,.pup_bg').click(function() {
         $('.pup_container_4').fadeOut(500);
+    });
+
+</script>
+<script>
+    $('.item_show_pic_5').click(function() {
+        $('.pup_container_5').fadeIn(500);
+    });
+    $('.pup_close_icon,.pup_bg').click(function() {
+        $('.pup_container_5').fadeOut(500);
     });
 
 </script>
