--- a/website/sino/page.html
+++ b/website/sino/page.html
@@ -23,7 +23,7 @@
         <div class="nav_btn">
             <a href="https://www.figma.com/file/eAMUmaOZsZQUqmqTKaS2a3/%E6%B0%B8%E8%B1%90%E7%B6%B2%E6%8A%95%E9%A0%81%E9%9D%A2?type=design&node-id=1556%3A1126&mode=design&t=qSx99ZLMjBnQTtH7-1" target="_blank">設計規範、原稿</a>
             <a href="https://www.figma.com/proto/eAMUmaOZsZQUqmqTKaS2a3/%E6%B0%B8%E8%B1%90%E7%B6%B2%E6%8A%95%E9%A0%81%E9%9D%A2?type=design&node-id=6457-4128&t=AfnI6glZojj0TxCA-0&scaling=min-zoom&page-id=1556%3A1126&starting-point-node-id=6457%3A4128" target="_blank">原型展示</a>
-            <a href="https://www.figma.com/file/eAMUmaOZsZQUqmqTKaS2a3/%E6%B0%B8%E8%B1%90%E7%B6%B2%E6%8A%95%E9%A0%81%E9%9D%A2?type=design&node-id=1556%3A1126&mode=design&t=qSx99ZLMjBnQTtH7-1" target="_blank">正式網站</a>
+            <a href="https://mma.sinopac.com/Insurance/" target="_blank">正式網站</a>
         </div>
     </div>
 
