--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@
             <div class="intor_text_container_1 intor_text_dis_1">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">&frasl;</span>10<span class="intor_symbol_1">&frasl;</span>15，銘傳數位媒體設計</div>
                 <div class="intor_text">
-                    在網頁、UI設計工作已有9年經驗，<span class="intor_text_point">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UI.UX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
+                    在網頁、UI設計工作已有9年經驗，能將<span class="intor_text_point">想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UI.UX設計師，主要執行專案客戶有<span class="intor_text_point">永豐銀行網路投保、泰安產物保險、元大槓桿期貨。</span>
                 </div>
             </div>
             <div class="intor_text_container_1 intor_text_dis_2" style="padding-top:0px;">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">.</span>10<span class="intor_symbol_1">.</span>15<br />銘傳大學數位媒體設計</div>
                 <div class="intor_text">
-                    在網頁、UI設計工作已有9年經驗，<span class="intor_text_point">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UI.UX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
+                    在網頁、UI設計工作已有9年經驗，<span class="intor_text_point">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UI.UX設計師，主要執行專案客戶有<span class="intor_text_point">永豐網路投保、泰安產物、元大槓桿期貨。</span>
                 </div>
             </div>
             <div class="intor_text_container_2 intor_text_dis_1">
                 <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
                 <div class="intor_text" style="word-break:break-all">
-                    使用Figma、Photoshop、illustrator製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span class="intor_text_point">熟悉RWD網頁建置技術，在規畫時能掌握可行度</span>。懂IOS和google設計規範，靈活<span class="intor_text_point">運用介面元件和使用者體驗知識，進行設計和規畫流程並製作設計規範。</span>
+                    使用Figma、Photoshop、illustrator製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span class="intor_text_point">熟悉RWD網頁建置，規畫能掌握可行度</span>。懂IOS和google設計規範，靈活<span class="intor_text_point">運用介面元件和使用者體驗知識，進行規畫流程並製作設計規範。</span>
                 </div>
             </div>
         </div>
@@ -143,7 +143,7 @@
         <div class="intor_text_container_2 intor_text_dis_2" style="float:none;">
             <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
             <div class="intor_text" style="word-break:break-all">
-                使用Figma、Photoshop、illustrator製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span class="intor_text_point">熟悉RWD網頁建置技術，在規畫時能掌握可行度</span>。懂IOS和google設計規範，<span class="intor_text_point">運用介面元件和使用者體驗知識，進行設計和規畫流程並製作設計規範。</span>
+                使用Figma、Photoshop、illustrator製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span class="intor_text_point">熟悉RWD網頁建置，規畫能掌握可行度</span>。懂IOS和google設計規範，<span class="intor_text_point">運用介面元件和使用者體驗知識，進行規畫流程並製作設計規範。</span>
             </div>
         </div>
 
@@ -273,7 +273,7 @@
                     <div class="works_item_container">
                         <a href="website/istudy_page/page.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t32_2" src="image/w8s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t3_2" src="image/w8s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar">
