--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="intor_text_container_2 intor_text_dis_1">
                 <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
                 <div class="intor_text" style="word-break:break-all">
-                    使用Figma、Photoshop、illustrator製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span class="intor_text_point">熟悉RWD網頁建置，規畫能掌握可行度</span>。懂IOS和google設計規範，靈活<span class="intor_text_point">運用介面元件和使用者體驗知識，進行規畫流程並製作設計規範。</span>
+                    使用Figma、Photoshop、illustrator製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span class="intor_text_point">熟悉RWD網頁建置，規畫能掌握可行度</span>。懂IOS和google設計規範，靈活<span class="intor_text_point">運用介面元件和使用者體驗知識，規畫流程並製作設計規範。</span>
                 </div>
             </div>
         </div>
@@ -143,7 +143,7 @@
         <div class="intor_text_container_2 intor_text_dis_2" style="float:none;">
             <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
             <div class="intor_text" style="word-break:break-all">
-                使用Figma、Photoshop、illustrator製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span class="intor_text_point">熟悉RWD網頁建置，規畫能掌握可行度</span>。懂IOS和google設計規範，<span class="intor_text_point">運用介面元件和使用者體驗知識，進行規畫流程並製作設計規範。</span>
+                使用Figma、Photoshop、illustrator製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span class="intor_text_point">熟悉RWD網頁建置，規畫能掌握可行度</span>。懂IOS和google設計規範，<span class="intor_text_point">運用介面元件和使用者體驗知識，規畫流程並製作設計規範。</span>
             </div>
         </div>
 
