--- a/index.html
+++ b/index.html
@@ -173,22 +173,25 @@
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>永豐網路投保</span><br />
+                                    <span>永豐網路投保</span>
+                                    <span style="font-size:14px;">(工作專案)</span>
+                                    <br />
                                     <span style="font-size:14px;color:#ffd452;">設計規範、RWD示意圖、原型展示</span>
                                 </div>
                             </div>
                         </a>
                     </div>
                     <div class="works_item_container">
-                        <a href="website/yuanta_cfd/index.html" target="_blank" role="button">
+                        <a href="website/yuan/page.html" target="_blank" role="button">
                             <div class="works_item">
                                 <div class="works_item_pic"><img id="t1_2" src="image/w10s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                    <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>元大期貨官網提案</span>
-                                    <span style="font-size:14px;color:#ffd452;">(得標)</span><br />
-                                    <span style="font-size:14px;">視覺和動畫應用</span>
+                                    <span>元大期貨官網</span>
+                                    <span style="font-size:14px;">(工作專案)</span><br />
+                                    <span style="font-size:14px;">提案得標、視覺設計</span>
                                 </div>
                             </div>
                         </a>
@@ -200,7 +203,7 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>元大期貨官網提案</span><br /><span style="font-size:14px;">視覺和動畫應用</span>
+                                    <span>元大期貨官網</span><span style="font-size:14px;">(提案)</span><br /><span style="font-size:14px;">視覺和互動應用</span>
                                 </div>
                             </div>
                         </a>
@@ -210,7 +213,7 @@
                             <div class="works_item_pic"><img id="t1_4" src="image/p17s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>泰安產物投保流程</span><br /><span style="font-size:14px;">UI物件和流程規劃</span></div>
+                            <div class="works_item_bar"><span>泰安產物官網</span><span style="font-size:14px;">(工作專案)</span><br /><span style="font-size:14px;">UI物件和投保流程規劃</span></div>
                         </div>
                     </div>
                 </div>
@@ -224,8 +227,8 @@
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>銀行APP redesign</span>
-                                    <span style="font-size:14px;color:#ffd452;">訪談整理、歸納問題點、思考解決、製作架構原型</span>
+                                    <span>銀行APP redesign</span><br />
+                                    <span style="font-size:14px;color:#ffd452;">訪談整理、歸納問題、思考解決、製作架構和原型</span>
                                 </div>
                             </div>
                         </a>
@@ -246,9 +249,18 @@
                             <div class="works_item">
                                 <div class="works_item_pic"><img id="t2_3" src="image/a2s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                    <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar"><span>社群APP設計</span><br /><span style="font-size:14px;color:#ffd452;">產品發想思維</span></div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="works_item_container">
+                        <a href="website/cnyes/page.html" target="_blank">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="t2_4" src="image/a6s.jpg" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                </div>
+                                <div class="works_item_bar"><span>註冊開戶流程</span><span style="font-size:14px;">(工作專案)</span></div>
                             </div>
                         </a>
                     </div>
