--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>泰安產物活動網頁</span>
+                                    <span>泰安產物活動網頁</span><span style="font-size:14px;">(工作專案)</span>
                                     <br />
                                     <span style="font-size:14px;">(含RWD切版)</span>
                                 </div>
@@ -289,7 +289,7 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>一頁式宣傳網頁</span>
+                                    <span>一頁式宣傳網頁</span><span style="font-size:14px;">(外包接案)</span>
                                     <br />
                                     <span style="font-size:14px;">(含RWD切版)</span>
                                 </div>
@@ -312,7 +312,7 @@
                             <div class="works_item_pic"><img id="t4_1" src="image/y1s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>銀行風險管理系統</span></div>
+                            <div class="works_item_bar"><span>銀行風險管理系統</span><span style="font-size:14px;">(提案)</span></div>
                         </div>
                     </div>
                     <div class="works_item_container">
@@ -320,7 +320,7 @@
                             <div class="works_item_pic"><img id="t4_2" src="image/y2s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>銀行企金風險分析</span></div>
+                            <div class="works_item_bar"><span>銀行企金風險分析</span><span style="font-size:14px;">(提案)</span></div>
                         </div>
                     </div>
                     <div class="works_item_container">
@@ -328,7 +328,7 @@
                             <div class="works_item_pic"><img id="t4_3" src="image/y3s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>案件管理系統</span></div>
+                            <div class="works_item_bar"><span>案件管理系統</span><span style="font-size:14px;">(提案)</span></div>
                         </div>
                     </div>
                 </div>
